# hippo_core

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
arift_interface/: CMakeLists.txt  package.xml
arift_interface/src/: interface_node.cpp  interface_node.hpp
depth_estimator/: CMakeLists.txt  package.xml
depth_estimator/config/: depth_ekf_params.yaml
depth_estimator/launch/: node_depth_estimator.launch.py  top_depth_estimator.launch.py
depth_estimator/nodes/: depth_estimator_node
esc/: CMakeLists.txt  package.xml
esc/config/: teensy_config.yaml
esc/esc/: afro_esc.py
esc/include/: afro_esc.h  esc.h
esc/launch/: node_teensy_esc.launch.py  teensy_esc.launch.py  top_teensy_esc.launch.py
esc/nodes/: esc_commander
esc/scripts/: motor_test.py
esc/src/: afro_esc.cpp  esc_commander_node.cpp
esc/src/teensy/: teensy_commander.cpp  teensy_commander.hpp  teensy_commander_params.cpp
hardware/: CMakeLists.txt  package.xml
hardware/launch/: bluerov.launch.py  bluerov_buddy.launch.py  hippo.launch.py
hardware/nodes/: camera_servo_node  newton_gripper_node  nsh_node  spotlight_node
hippo_common/: CMakeLists.txt  package.xml
hippo_common/config/: transformations_bluerov_default.yaml  transformations_hippo_default.yaml
hippo_common/hippo_common/: launch_helper.py
hippo_common/launch/: apriltag.launch.py  apriltag_offboard.launch.py  apriltag_onboard.launch.py  bagfile.launch.py  calibration.launch.py  camera.launch.py  tf_publisher_bluerov.launch.py  tf_publisher_hippo.launch.py  top_lemniscate_demo_offboard.launch.py  top_lemniscate_demo_offboard_bluerov.launch.py
hippo_common/scripts/: build-ros  clean-ros  install_scripts.sh
hippo_common/src/: convert.cpp  param_utils.cpp  tf2_utils.cpp  tf_publisher.cpp
hippo_control/: CMakeLists.txt  package.xml
hippo_control/config/: actuator_mixer_bluerov_advanced.yaml  actuator_mixer_bluerov_default.yaml  actuator_mixer_hippocampus_default.yaml  attitude_control_hippocampus_default.yaml  carrot_control_hippocampus.yaml  motor_failure_default.yaml  rate_control_hippocampus_default.yaml
hippo_control/launch/: node_actuator_mixer.launch.py  node_actuator_mixer_bluerov.launch.py  node_attitude_control.launch.py  node_carrot_control.launch.py  node_rate_controller.launch.py  top_attitude_control.launch.py  top_carrot_control_hippo_.launch.py  top_motor_failure_intra_process.launch.py  top_path_following_intra_process.launch.py  top_path_following_quaternion.launch.py  top_rate_control.launch.py  top_test_thruster_config.launch.py
hippo_control/src/: geometric_attitude_control.cpp  simple_mixer.cpp
hippo_gz_msgs/: CMakeLists.txt  package.xml
hippo_gz_msgs/msg/: range_measurement.proto  range_measurement_array.proto
hippo_gz_plugins/: CMakeLists.txt  package.xml
hippo_gz_plugins/include/: common.hpp
hippo_msgs/: CMakeLists.txt  package.xml
hippo_msgs/msg/: ActuatorControls.msg  ActuatorSetpoint.msg  AnchorPose.msg  AnchorPoses.msg  AngularVelocity.msg  AttitudeTarget.msg  ControlTarget.msg  DepthStamped.msg  EscRpms.msg  EstimatorInnovation.msg  EstimatorSensorBias.msg  EstimatorState.msg  FailureControlDebug.msg  FailureControlMode.msg  FailureControlModeStamped.msg  Int64Stamped.msg  ModemOut.msg  NewtonGripperCommand.msg  Path.msg  PathFollowerDebug.msg  QuaternionControlDebug.msg  RangeMeasurement.msg  RangeMeasurementArray.msg  RatesDebug.msg  RatesTarget.msg  ThrusterForces.msg  VelocityControlTarget.msg
hippo_msgs/srv/: SetAxis.srv  SetPath.srv
hippo_sim/: CMakeLists.txt  package.xml
hippo_sim/launch/: spawn_apriltag_floor.launch.py  spawn_bluerov.launch.py  spawn_hippocampus.launch.py  spawn_vehicle.launch.py  spawn_wall_tags.launch.py  start_gazebo.launch.py  top_single_vehicle_complete.launch.py
hippo_sim/scripts/: create_robot_description.py  generate_pool.py  generate_tag_poses.py
hippo_sim/src/: fake_state_estimator.cpp  fake_vision.cpp  simulated_baro.cpp  spawn.cpp  static_bridge.cpp
mjpeg_cam/: CMakeLists.txt  package.xml
mjpeg_cam/config/: ov9281.yaml
mjpeg_cam/launch/: image_decoder.launch.py  image_rectification.launch.py  ov9281.launch.py
mjpeg_cam/nodes/: mjpeg_cam_python
mjpeg_cam/src/: device.cpp  image_decoder.cpp  mjpeg_cam.cpp  mjpeg_cam_params.cpp
path_planning/: CMakeLists.txt  package.xml
path_planning/config/: bernoulli_default.yaml  bernoulli_small.yaml  circles.yaml  motor_failure_surface.yaml  path_follower_default.yaml
path_planning/launch/: node_path_follower.launch.py
path_planning/path_planning/: generation.py
path_planning/scripts/: set_path.py
path_planning/src/: generate_motor_failure.cpp  generate_waypoints.cpp  path.cpp  rviz_helper.cpp  static_generation.cpp
qualisys_bridge/: CMakeLists.txt  package.xml
qualisys_bridge/src/: ekf.cpp
rapid_trajectories/: CMakeLists.txt  package.xml
rapid_trajectories/bagfile/: .gitignore  common.py  main.py  quadrocoptertrajectory.py  requirements.txt  simulator.py  to_pandas.py
rapid_trajectories/config/: simple_tracker.yaml
rapid_trajectories/launch/: node_single_trajectory.launch.py  top_single_trajectory_test.launch.py
rapid_trajectories/msg/: Trajectory.msg  TrajectoryArray.msg  TrajectoryStamped.msg
rapid_trajectories/src/: performance_test.cpp  rviz_helper.cpp
rapid_trajectories_msgs/: CMakeLists.txt  package.xml
rapid_trajectories_msgs/msg/: CurrentStateDebug.msg  SingleAxisTrajectory.msg  TargetState.msg  TrackingDebug.msg  Trajectory.msg  TrajectoryArray.msg  TrajectoryResult.msg  TrajectoryStamped.msg
remote_control/: CMakeLists.txt  package.xml
remote_control/config/: joystick_gains_default.yaml
remote_control/launch/: joystick_control.launch.py
state_estimation/: .gitignore  CMakeLists.txt  README.md  package.xml
state_estimation/equations/: README.md  ekf.ipynb  ekf.py  helper_functions.py  requirements.txt  test.c
state_estimation/src/: estimator.cpp  interface.cpp  util.cpp
state_estimation/test/: CMakeLists.txt  ekf_basic.cpp  main.cpp
vision/: CMakeLists.txt  package.xml
vision/src/: vision_apriltag_simple.cpp
(+213 files in other folders)
