<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_estimator</name>
  <version>0.0.0</version>
  <description>The depth estimator package</description>

  <maintainer email="nathalie.bauschmann@tuhh.de">Nathalie Bauschmann</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <url type="website">hippocampusrobotics.github.io/docs</url>


  <author email="nathalie.bauschmann@tuhh.de">Nathalie Bauschmann</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>python3-smbus2-pip</depend>
  <depend>hippo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
